--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
   "name": "product-catalog",
+  "homepage": "https://fe-jan23-team-six.github.io/product-catalog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/classnames": "^2.3.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.26",
+    "@types/node-sass": "^4.11.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "classnames": "^2.3.2",
+    "gh-pages": "^5.0.0",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "stylelint-scss": "^5.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ignore-path .gitignore",
+    "lint": "eslint . --ignore-path .gitignore && stylelint \"**/*.scss\"",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -49,11 +59,14 @@
     "eslint": "^8.40.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.0",
-    "lint-staged": "^13.2.2"
+    "lint-staged": "^13.2.2",
+    "stylelint": "^15.6.1",
+    "stylelint-config-recommended-scss": "^11.0.0",
+    "uuidv4": "^6.2.13"
   },
   "lint-staged": {
-    "*.ts": "npm run lint",
-    "*.tsx": "npm run lint",
-    "*.scss": "npm run lint"
+    "*.tsx": "eslint",
+    "*.ts": "eslint",
+    "*.scss": "stylelint"
   }
 }
