--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "product-catalog",
-  "homepage": "https://fe-jan23-team-six.github.io/product-catalog",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
