--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "product-catalog",
-  "homepage": "https://fe-jan23-team-six.github.io/product-catalog",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "stylelint-scss": "^5.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -54,6 +56,7 @@
   },
   "devDependencies": {
     "@mate-academy/eslint-config": "0.0.25",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.40.0",
