--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.4",
     "classnames": "^2.3.2",
     "gh-pages": "^5.0.0",
+    "node-fetch": "^3.3.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
