--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "stylelint-scss": "^5.0.0",
+    "swiper": "^9.3.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
