Fetch data from server and fill them the ProductCard

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,5 +26,9 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "no-shadow": "off",
+      "@typescript-eslint/no-shadow": "warn",
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": ["error"]
     }
 }
