--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,8 @@
       "no-shadow": "off",
       "@typescript-eslint/no-shadow": "warn",
       "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": ["error"]
+      "@typescript-eslint/no-unused-vars": ["error"],
+      "react/display-name": "off",
+      "react/prop-types": "off"
     }
 }
